Add very basic workflow to the student activity.

--- a/app/src/main/res/layout/activity_student_game.xml
+++ b/app/src/main/res/layout/activity_student_game.xml
@@ -49,7 +49,7 @@
             android:textStyle="bold"
             android:typeface="serif"
             tools:ignore="NestedWeights"
-            android:focusable="false"></EditText>
+            android:focusable="false"/>
 
         <Button
             android:id="@+id/clear"
