--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2015 Samuel Yuri Zvir
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,38 +18,174 @@
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="@color/white"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="br.com.ema.activities.operations.StatsActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/logo3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="50dp"
+        android:layout_weight="0.1">
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="345dp" />
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_gravity="left"
+            android:gravity="left">
 
-    <SeekBar
-        android:id="@+id/seekBar2"
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/stats"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:typeface="normal" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right"
+            android:gravity="right">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="right"
+                android:gravity="right"
+                android:src="@mipmap/logo3" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="8dp"
-        android:layout_toLeftOf="@+id/tvYMax"
-        android:layout_marginRight="5dp"
-        android:max="200"
-        android:paddingBottom="12dp" />
+        android:layout_height="50dp"
+        android:layout_weight="0.02"
+        android:gravity="center_horizontal">
+
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal">
+
+            <TextView
+                android:id="@+id/nameForStats"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/name"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:typeface="normal" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/contentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="606dp"
+        android:layout_weight="0.9"
+        android:orientation="vertical">
+
+        <TableLayout
+            android:id="@+id/statsTableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="197dp"
+            android:stretchColumns="0,1"
+            android:padding="5dip">
+
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_column="0"
+                    android:background="@drawable/table_border"
+                    android:text="@string/Points"
+                    android:padding="5dip"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                <TextView
+                    android:layout_column="1"
+                    android:background="@drawable/table_border"
+                    android:padding="5dip"
+                    android:text="0"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+            </TableRow>
+            <TableRow
+                android:id="@+id/tableRow2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_column="0"
+                    android:background="@drawable/table_border"
+                    android:text="@string/playedActivities"
+                    android:padding="5dip"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                <TextView
+                    android:layout_column="1"
+                    android:background="@drawable/table_border"
+                    android:padding="5dip"
+                    android:text="0"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+            </TableRow>
+            <TableRow
+                android:id="@+id/tableRow3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_column="0"
+                    android:background="@drawable/table_border"
+                    android:text="@string/highestPontuation"
+                    android:padding="5dip"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                <TextView
+                    android:layout_column="1"
+                    android:background="@drawable/table_border"
+                    android:padding="5dip"
+                    android:text="0"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+            </TableRow>
+            <TableRow
+                android:id="@+id/tableRow4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_column="0"
+                    android:background="@drawable/table_border"
+                    android:text="@string/lowestPontuation"
+                    android:padding="5dip"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                <TextView
+                    android:layout_column="1"
+                    android:background="@drawable/table_border"
+                    android:padding="5dip"
+                    android:text="0"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+            </TableRow>
+        </TableLayout>
+
+        <LinearLayout
+            android:id="@+id/chartsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </LinearLayout>
