add logic to see basic statistics about the user's performance in the activities.

--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -104,7 +104,8 @@
             android:layout_width="match_parent"
             android:layout_height="197dp"
             android:stretchColumns="0,1"
-            android:padding="5dip">
+            android:padding="5dip"
+            android:layout_weight="0.3">
 
             <TableRow
                 android:id="@+id/tableRow1"
@@ -114,13 +115,13 @@
                     android:layout_column="0"
                     android:background="@drawable/table_border"
                     android:text="@string/Points"
-                    android:padding="5dip"
+                    android:padding="3dip"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
                 <TextView
+                    android:id="@+id/pointsTextValue"
                     android:layout_column="1"
                     android:background="@drawable/table_border"
-                    android:padding="5dip"
-                    android:text="0"
+                    android:padding="3dip"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
             </TableRow>
             <TableRow
@@ -131,13 +132,13 @@
                     android:layout_column="0"
                     android:background="@drawable/table_border"
                     android:text="@string/playedActivities"
-                    android:padding="5dip"
+                    android:padding="3dip"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
                 <TextView
+                    android:id="@+id/playedActivitiesTextValue"
                     android:layout_column="1"
                     android:background="@drawable/table_border"
-                    android:padding="5dip"
-                    android:text="0"
+                    android:padding="3dip"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
             </TableRow>
             <TableRow
@@ -147,14 +148,14 @@
                 <TextView
                     android:layout_column="0"
                     android:background="@drawable/table_border"
-                    android:text="@string/highestPontuation"
-                    android:padding="5dip"
+                    android:text="@string/highestPointing"
+                    android:padding="3dip"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
                 <TextView
+                    android:id="@+id/highestPointingTextValue"
                     android:layout_column="1"
                     android:background="@drawable/table_border"
-                    android:padding="5dip"
-                    android:text="0"
+                    android:padding="3dip"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
             </TableRow>
             <TableRow
@@ -164,14 +165,14 @@
                 <TextView
                     android:layout_column="0"
                     android:background="@drawable/table_border"
-                    android:text="@string/lowestPontuation"
+                    android:text="@string/lowestPointing"
                     android:padding="5dip"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
                 <TextView
+                    android:id="@+id/lowestPointingTextValue"
                     android:layout_column="1"
                     android:background="@drawable/table_border"
                     android:padding="5dip"
-                    android:text="0"
                     android:textAppearance="?android:attr/textAppearanceLarge"/>
             </TableRow>
         </TableLayout>
@@ -180,12 +181,27 @@
             android:id="@+id/chartsLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.5"
+            android:layout_weight="1.78"
             android:orientation="horizontal">
 
         </LinearLayout>
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="43dp"
+        android:id="@+id/buttonsLayout"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/goBack"
+            android:id="@+id/backBtn"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal" />
     </LinearLayout>
 
 </LinearLayout>
