--- a/app/src/main/res/layout/activity_manage_words.xml
+++ b/app/src/main/res/layout/activity_manage_words.xml
@@ -97,7 +97,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:gravity="center_horizontal">
 
         <Button
         android:layout_width="wrap_content"
