--- a/app/src/main/res/layout/activity_profiles.xml
+++ b/app/src/main/res/layout/activity_profiles.xml
@@ -71,7 +71,8 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_weight="0.07">
+        android:layout_weight="0.07"
+        android:gravity="center_horizontal">
 
         <Button
             android:layout_width="wrap_content"
