show dialog when there's no user checked for statistics.

--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -201,6 +201,7 @@
             android:text="@string/goBack"
             android:id="@+id/backBtn"
             android:layout_gravity="center_horizontal"
+            android:onClick="goBack"
             android:gravity="center_horizontal" />
     </LinearLayout>
 
