Add go back button

--- a/app/src/main/res/layout/activity_abc.xml
+++ b/app/src/main/res/layout/activity_abc.xml
@@ -87,6 +87,12 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/goBack"
+            android:id="@+id/goBackBtn"
+            android:onClick="goBack"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/save"
             android:id="@+id/newWord"
             android:onClick="saveGame"
