--- a/app/src/main/res/layout/activity_data_analysis.xml
+++ b/app/src/main/res/layout/activity_data_analysis.xml
@@ -74,6 +74,13 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/goBack"
+            android:id="@+id/goBackBtn"
+            android:onClick="goBack"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/stats"
             android:id="@+id/stats"
             android:onClick="toStats"
