--- a/app/src/main/res/layout/activity_student_game.xml
+++ b/app/src/main/res/layout/activity_student_game.xml
@@ -18,6 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -31,7 +32,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_weight="1.0">
+        android:layout_weight="0.5">
 
 
 
@@ -45,7 +46,7 @@
             android:enabled="false"
             android:inputType="text"
             android:textColorLink="@android:color/primary_text_dark"
-            android:textSize="50sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:typeface="serif"
             tools:ignore="NestedWeights"
@@ -58,6 +59,7 @@
             android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:enabled="false"
+            android:background="@color/white"
             android:onClick="onClick"
             android:drawableTop="@drawable/ic_backspace_black_24dp" />
     </LinearLayout>
@@ -68,7 +70,7 @@
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="3.5">
+        android:layout_weight="3">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -82,12 +84,12 @@
         android:id="@+id/information"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/information"
+        android:text="@string/build_the_words"
         android:textSize="@dimen/activity_horizontal_margin"
         android:typeface="serif"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:layout_weight="0.5" />
+        android:layout_weight="0.3" />
 
     <LinearLayout
         android:id="@+id/scrambled"
@@ -97,23 +99,34 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center|center_vertical|center_horizontal"
         android:weightSum="1"
-        android:layout_weight="1.5">
+        android:layout_weight="4"
+        android:background="@color/blue">
     </LinearLayout>
-    <LinearLayout
+
+    <me.grantland.widget.AutofitLayout
         android:id="@+id/help"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5">
-
-    </LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:layout_weight="1">
+        <me.grantland.widget.AutofitTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:id="@+id/helpText"
+            />
+    </me.grantland.widget.AutofitLayout>
 
 
     <LinearLayout
         android:id="@+id/speakers"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
+        android:layout_weight="1"
         android:orientation="horizontal"
         android:gravity="center_horizontal">
 
